# hyperliquid-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md
hl/: __init__.py  __main__.py  auth.py  cli.py  config.py  envelope.py  order_logger.py  orders.py  safety.py  sizing.py
tests/: conftest.py  test_auth.py  test_order_logger.py  test_orders.py  test_safety.py  test_sizing.py
