[project]
name = "hyperliquid-cli"
version = "0.1.0"
description = "Standalone CLI wrapper for the official Hyperliquid Python SDK — read-only market + account data plus signed execution via API wallet."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Kris Urbas" },
]
keywords = ["hyperliquid", "hl", "perps", "dex", "cli", "trading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Utilities",
]
dependencies = [
    "hyperliquid-python-sdk>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/krzysu/hyperliquid-cli"
Repository = "https://github.com/krzysu/hyperliquid-cli"
Issues = "https://github.com/krzysu/hyperliquid-cli/issues"

[project.scripts]
hl = "hl.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hl"]

[tool.hatch.version]
path = "hl/__init__.py"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]